# beer_forecast

./: Dockerfile  README.md  pyproject.toml  research.ipynb  run.py
app/: api.py
model/: config.yaml  pipeline.py  predict.py  train_pipeline.py
model/config/: __init__.py
model/datasets/: holidays.csv
model/processing/: __init__.py
model/trained_models/: beer_pipeline_LR_output20220629.pkl  beer_pipeline_RFR_output20220629.pkl  beer_pipeline_SVR_output20220629.pkl
